<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.weatherlogger.core.data.WeatherModel" />       
			
		<variable
			name="clickListener"
			type="com.example.weatherlogger.views.list.WeatherListAdapter.DeleteItemListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_shape"
        android:layout_margin="2dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">      

            <TextView
                android:id="@+id/temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/some_temp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="32sp"
				android:gravity="center"
                android:ellipsize="end"
                android:text="@{item.temp}"
				app:layout_constraintTop_toTopOf="parent"				
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"/>
				
				<TextView
                android:id="@+id/degree_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"   
				android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"				
                android:textSize="12sp"              
                android:text="@string/degree"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toEndOf="@id/temp_tv"/>
				
				<TextView
                android:id="@+id/fahrenheit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                              
                android:textSize="16sp"              
                android:text="@string/fahrenheit"
				app:layout_constraintTop_toBottomOf="@id/degree_tv"
				app:layout_constraintStart_toStartOf="@id/degree_tv"
				app:layout_constraintBottom_toBottomOf="@id/temp_tv"/>
				
				<!--			Min Temp			-->
				
				<TextView
                android:id="@+id/min_temp_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/min_temp"
                app:layout_constraintTop_toBottomOf="@id/temp_tv"
				app:layout_constraintStart_toStartOf="@id/max_temp_label_tv"				
				app:layout_constraintEnd_toEndOf="@id/max_temp_label_tv"				
                />
				
				<TextView
                android:id="@+id/min_temp_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"              
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
				android:textStyle="bold"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@{item.temp_min}"
                app:layout_constraintTop_toBottomOf="@id/temp_tv"
				app:layout_constraintStart_toEndOf="@id/min_temp_label_tv"               
                />
				
				<!--			Max Temp			-->
				
				<TextView
                android:id="@+id/max_temp_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"              
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/max_temp"
                app:layout_constraintTop_toBottomOf="@id/min_temp_label_tv"
				app:layout_constraintStart_toStartOf="parent"
                />
				
				<TextView
                android:id="@+id/max_temp_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"              
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
				android:textStyle="bold"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@{item.temp_max}"
                app:layout_constraintTop_toBottomOf="@id/min_temp_label_tv"
				app:layout_constraintStart_toEndOf="@id/max_temp_label_tv"               
                />
				
				<!--			Pressure			-->
				
				<TextView
                android:id="@+id/pressure_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"                             
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/pressure"
                app:layout_constraintTop_toBottomOf="@id/max_temp_label_tv"
				app:layout_constraintStart_toStartOf="@id/min_temp_label_tv"
				app:layout_constraintEnd_toEndOf="@id/min_temp_label_tv"
                />
				
				<TextView
                android:id="@+id/pressure_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"              
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
				android:textStyle="bold"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@{item.pressure}"
                app:layout_constraintTop_toBottomOf="@id/max_temp_label_tv"
				app:layout_constraintStart_toEndOf="@id/pressure_label_tv"               
                />
				
				<!--			Humidity			-->
				
				<TextView
                android:id="@+id/humidity_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"                              
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/humidity"
                app:layout_constraintTop_toBottomOf="@id/pressure_label_tv"
				app:layout_constraintStart_toStartOf="@id/min_temp_label_tv"
				app:layout_constraintEnd_toEndOf="@id/min_temp_label_tv"	
                />
				
				<TextView
                android:id="@+id/humidity_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"              
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
				android:textStyle="bold"
                android:textColor="@color/grey"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@{item.humidity}"
                app:layout_constraintTop_toBottomOf="@id/pressure_label_tv"
				app:layout_constraintStart_toEndOf="@id/humidity_label_tv"               
                />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"              
                android:layout_margin="16dp"
                android:textSize="16sp"                
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@{item.date}"
                app:layout_constraintTop_toBottomOf="@id/humidity_label_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                />
				
			<ImageView
				android:id="@+id/delete_iv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/delete"
				android:src="@drawable/ic_delete"
				android:layout_margin="16dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:onClick="@{() -> clickListener.onClick(item)}"
				/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>